@@ -23,10 +23,6 @@
   </modules>
 
   <properties>
-    <java.release>21</java.release>
-    <java.version>21</java.version>
-    <maven.compiler.source>21</maven.compiler.source>
-    <maven.compiler.target>21</maven.compiler.target>
     <main.basedir>${project.basedir}</main.basedir>
     <default.package>com.resourcetracker</default.package>
   </properties>
@@ -249,7 +245,7 @@
       <dependency>
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok</artifactId>
-        <version>1.18.30</version>
+        <version>1.18.34</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
@@ -471,9 +467,14 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
           <configuration>
-            <source>21</source>
-            <target>21</target>
-            <compilerArgs>--enable-preview</compilerArgs>
+            <release>22</release>
+            <annotationProcessorPaths>
+              <path>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.18.34</version>
+              </path>
+            </annotationProcessorPaths>
           </configuration>
         </plugin>
 
@@ -565,7 +566,7 @@
           <version>2.8.0</version>
           <configuration>
             <from>
-              <image>openjdk:21-jdk</image>
+              <image>openjdk:23-jdk</image>
             </from>
             <to>
               <image>${jib.to.image}</image>
